gke/deployment.yaml
---
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "openlang-deployment"
  namespace: "default"
  labels:
    app: "openlang-server"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "openlang-server"
  template:
    metadata:
      labels:
        app: "openlang-server"
    spec:
      containers:
      - name: "server-instance"
        image: "us-central1-docker.pkg.dev/endless-matter-387302/openlang/server:latest"
        ports:
          - containerPort: 5000
