gke/service.yaml
apiVersion: v1
  kind: Service
  metadata:
	name: my-app
  spec:
	type: LoadBalancer
	selector:
	  app: my-app
	ports:
	- port: '5000'
      targetPort: '5000'

apiVersion: extensions/v1beta1
  kind: Deployment
  metadata:
	name: my-app
  spec:
	replicas: 1
	selector:
	  matchLabels:
	    app: my-app
	template:
	  metadata:
	    labels:
	      app: my-app
	  spec:
	    containers:
	    - name: my-app
	      image: "gcr.io/<project-name>/app-image:version1.0"
	      ports:
	      - containerPort: 80
value: 80
